Refactored/New to use CyberCore